--- a/index.html
+++ b/index.html
@@ -1,130 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>b3b3 store</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>b3b3 store</title>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
-    }
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family: Arial, sans-serif;
+}
 
-    body {
-      height: 100vh;
-      background: radial-gradient(circle at top, #0b1d3a, #020617);
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-    }
+body{
+  height:100vh;
+  background: radial-gradient(circle at bottom, #0a1a3a, #000814);
+  overflow:hidden;
+  color:white;
+}
 
-    /* stars */
-    body::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background-image:
-        radial-gradient(1px 1px at 20% 30%, white, transparent),
-        radial-gradient(1px 1px at 80% 40%, white, transparent),
-        radial-gradient(1px 1px at 50% 70%, white, transparent),
-        radial-gradient(1px 1px at 10% 80%, white, transparent),
-        radial-gradient(1px 1px at 90% 20%, white, transparent);
-      opacity: 0.8;
-    }
+/* stars */
+body::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:url("https://i.imgur.com/7b1bZQx.png");
+  animation: stars 60s linear infinite;
+  opacity:.5;
+}
 
-    .container {
-      text-align: center;
-      z-index: 2;
-    }
+@keyframes stars{
+  from{background-position:0 0;}
+  to{background-position:-2000px 2000px;}
+}
 
-    h1 {
-      font-size: 48px;
-      letter-spacing: 4px;
-      margin-bottom: 30px;
-    }
+/* snow */
+.snow{
+  position:absolute;
+  top:-10px;
+  width:6px;
+  height:6px;
+  background:white;
+  border-radius:50%;
+  opacity:.8;
+  animation: fall linear infinite;
+}
 
-    .enter-btn {
-      display: inline-block;
-      padding: 16px 50px;
-      font-size: 26px;
-      letter-spacing: 3px;
-      color: white;
-      border: 2px solid rgba(255,255,255,0.6);
-      background: rgba(255,255,255,0.08);
-      backdrop-filter: blur(8px);
-      border-radius: 40px;
-      cursor: pointer;
-      transition: 0.3s;
-      text-decoration: none;
-    }
+@keyframes fall{
+  to{
+    transform: translateY(110vh);
+  }
+}
 
-    .enter-btn:hover {
-      background: rgba(255,255,255,0.2);
-      transform: scale(1.05);
-    }
+header{
+  position:absolute;
+  top:30px;
+  width:100%;
+  text-align:center;
+  font-size:22px;
+  letter-spacing:3px;
+  opacity:.9;
+}
 
-    /* snow */
-    canvas {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 1;
-    }
-  </style>
+.center{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.enter{
+  font-size:120px;
+  font-weight:bold;
+  text-decoration:none;
+  color:white;
+  letter-spacing:10px;
+  text-shadow:0 0 20px rgba(255,255,255,.8);
+  transition:.3s;
+}
+
+.enter:hover{
+  transform:scale(1.1);
+  text-shadow:0 0 40px white;
+}
+</style>
 </head>
+
 <body>
 
-  <canvas id="snow"></canvas>
+<header>b3b3 store</header>
 
-  <div class="container">
-    <h1>b3b3</h1>
-    <a class="enter-btn" href="#">ENTER</a>
-  </div>
+<div class="center">
+  <a href="#" class="enter">ENTER</a>
+</div>
 
-  <script>
-    const canvas = document.getElementById("snow");
-    const ctx = canvas.getContext("2d");
-
-    let w = canvas.width = window.innerWidth;
-    let h = canvas.height = window.innerHeight;
-
-    const flakes = Array.from({ length: 120 }, () => ({
-      x: Math.random() * w,
-      y: Math.random() * h,
-      r: Math.random() * 2 + 1,
-      s: Math.random() * 1 + 0.5
-    }));
-
-    function snow() {
-      ctx.clearRect(0, 0, w, h);
-      ctx.fillStyle = "white";
-
-      flakes.forEach(f => {
-        ctx.beginPath();
-        ctx.arc(f.x, f.y, f.r, 0, Math.PI * 2);
-        ctx.fill();
-        f.y += f.s;
-        if (f.y > h) {
-          f.y = -10;
-          f.x = Math.random() * w;
-        }
-      });
-
-      requestAnimationFrame(snow);
-    }
-
-    snow();
-
-    window.onresize = () => {
-      w = canvas.width = window.innerWidth;
-      h = canvas.height = window.innerHeight;
-    };
-  </script>
+<script>
+for(let i=0;i<80;i++){
+  let snow=document.createElement("div");
+  snow.className="snow";
+  snow.style.left=Math.random()*100+"vw";
+  snow.style.animationDuration=5+Math.random()*5+"s";
+  snow.style.opacity=Math.random();
+  document.body.appendChild(snow);
+}
+</script>
 
 </body>
 </html>
