--- a/index.html
+++ b/index.html
@@ -1,44 +1,97 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>متجر عصري | Premium Store</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Seventh Stores - Shop All</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+        header {
+            background-color: #fff;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .product {
+            background-color: #fff;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
+        }
+        .product:hover {
+            transform: translateY(-5px);
+        }
+        .product img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
+        .product-info {
+            padding: 15px;
+        }
+        .product-title {
+            font-size: 18px;
+            margin: 0;
+        }
+        .product-price {
+            color: #e74c3c;
+            font-weight: bold;
+        }
+        button {
+            background-color: #000;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            width: 100%;
+        }
+        button:hover {
+            background-color: #333;
+        }
+    </style>
 </head>
 <body>
-
-    <header class="hero">
-        <nav class="side-nav">
-            <ul>
-                <li><a href="#">المتجر</a></li>
-                <li><a href="#">تواصل معنا</a></li>
-                <li><a href="#">لووك بوك</a></li>
-            </ul>
-        </nav>
-        <div class="overlay">
-            <h1>PREMIUM BRAND</h1>
-            <p>تصميمات مخصصة لعالم الموضة</p>
-        </div>
+    <header>
+        <h1>Seventh Stores</h1>
+        <p>Shop All Collections</p>
     </header>
-
-    <section class="products">
-        <h2>أحدث التشكيلات</h2>
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300x400" alt="منتج">
-                <h3>تيشرت عصري - 1</h3>
-                <p>450 EGP</p>
-                <button class="add-btn">أضف للسلة</button>
+    <div class="container">
+        <div class="products">
+            <!-- مثال على منتج واحد؛ كرر لإضافة المزيد -->
+            <div class="product">
+                <img src="https://via.placeholder.com/250x300?text=Product+Image" alt="Product">
+                <div class="product-info">
+                    <h3 class="product-title">Sample Product</h3>
+                    <p class="product-price">$50.00</p>
+                    <button>Add to Cart</button>
+                </div>
             </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300x400" alt="منتج">
-                <h3>هودي كلاسيك - 2</h3>
-                <p>600 EGP</p>
-                <button class="add-btn">أضف للسلة</button>
-            </div>
+            <!-- أضف منتجات أخرى هنا -->
         </div>
-    </section>
-
+    </div>
+    <script>
+        // JavaScript بسيط لإضافة تفاعل (مثل إضافة إلى السلة)
+        document.querySelectorAll('button').forEach(btn => {
+            btn.addEventListener('click', () => {
+                alert('Added to cart!');
+            });
+        });
+    </script>
 </body>
 </html>
