--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
 </head>
 <body>
 
-  <!-- Snow -->
-  <div class="snow"></div>
+  <!-- stars background -->
+  <div class="stars"></div>
 
-  <!-- Header -->
-  <header>
-    <h1 class="store-name">b3b3 store</h1>
-  </header>
+  <!-- snow -->
+  <canvas id="snow"></canvas>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h2 class="enter-text">𝓔𝓷𝓽𝓮𝓻</h2>
-    <button class="enter-btn">Enter</button>
-  </section>
+  <!-- brand -->
+  <div class="brand">b3b3 store</div>
 
-  <!-- Products (empty) -->
-  <section class="products">
-    <!-- انتي هتحطي المنتجات هنا -->
-  </section>
+  <!-- center -->
+  <div class="center">
+    <a href="#" class="enter">ENTER</a>
+  </div>
+
+  <!-- empty products -->
+  <section class="products"></section>
 
   <script src="script.js"></script>
 </body>
